infra/modules/vpc/main.tf
# VPC module

# 2 AZs, 2 public + 2 private subnets

# IGW, NAT GW (one is fine for the assignment), public route tables + private route tables

# Required EKS subnet tags:

# kubernetes.io/cluster/<cluster-name> = shared

# Public subnets: kubernetes.io/role/elb = 1

# Private subnets: kubernetes.io/role/internal-elb = 1

resource "aws_vpc" "main" {
  cidr_block       = var.cidr_block

  enable_dns_hostnames = true
 

  tags = {
    Name = "${var.project_name}-vpc"
  }
}

resource "aws_subnet" "public" {
  for_each = var.public_subnets //[public-a, public-b]

  vpc_id                  = aws_vpc.main.id
  cidr_block              = each.value.cidr_block 
  availability_zone       = var.azs[each.value.az_index]
  map_public_ip_on_launch = true

  tags = merge(
    {
      Name = each.key
      Tier = "public"
    },
    {
      # EKS needs these for public-facing load balancers
      "kubernetes.io/cluster/${var.cluster_name}" = "shared"
      "kubernetes.io/role/elb"                    = "1"
    }
  )
}

resource "aws_subnet" "private" {
  for_each = var.private_subnets
  
  vpc_id = aws_vpc.main.id
  cidr_block = each.value.cidr_block
  availability_zone = var.azs[each.value.az_index]

  tags = merge(
    {
      Name = each.key
      Tier = "private"
    },
    {
      # EKS needs these for internal load balancers
      "kubernetes.io/cluster/${var.cluster_name}" = "shared"
      "kubernetes.io/role/internal-elb" = 1
    }
  )

}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-igw"
  }
}

resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name = "${var.project_name}-nat-eip"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id

  subnet_id     = aws_subnet.public[sort(keys(aws_subnet.public))[0]].id

  tags = {
    Name = "${var.project_name}-nat"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-public-route-table"
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-private-route-table"
  }
}

resource "aws_route" "public_internet_access" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route" "private_nat_access" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "public" {
  for_each = aws_subnet.public

  subnet_id      = each.value.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  for_each = aws_subnet.private

  subnet_id      = each.value.id
  route_table_id = aws_route_table.private.id
}
